# ComPPare

./: .gitignore  .gitmodules  LICENSE.md  LICENSE_8md.html  NOTICE  README.md  README_8md.html  annotated.html  annotated_dup.js  ansi_8hpp.html  ansi_8hpp.js  ansi_8hpp__dep__incl.map  ansi_8hpp__incl.map  ansi_8hpp_source.html  classcomppare_1_1InputContext.html  classcomppare_1_1InputContext.js  classcomppare_1_1InputContext_1_1OutputContext-members.html  classcomppare_1_1InputContext_1_1OutputContext.html  classcomppare_1_1InputContext_1_1OutputContext.js  classcomppare_1_1config-members.html  classcomppare_1_1config.html  classcomppare_1_1current__state-members.html  classcomppare_1_1current__state.html  classcomppare_1_1internal_1_1ansi_1_1ScopedAnsiWrapper-members.html  classcomppare_1_1internal_1_1ansi_1_1ScopedAnsiWrapper.html  classcomppare_1_1internal_1_1ansi_1_1ScopedAnsiWrapper.js  classcomppare_1_1internal_1_1ansi_1_1ScopedAnsiWrapper__coll__graph.map  classcomppare_1_1internal_1_1ansi_1_1ScopedAnsiWrapper__coll__graph.md5  classcomppare_1_1internal_1_1policy_1_1MetricValue-members.html  classcomppare_1_1internal_1_1policy_1_1MetricValue.html  classcomppare_1_1internal_1_1policy_1_1MetricValue.js  classcomppare_1_1internal_1_1policy_1_1MetricValue__coll__graph.map  classcomppare_1_1internal_1_1policy_1_1MetricValue__coll__graph.md5  classcomppare_1_1internal_1_1policy_1_1autopolicy_1_1ArithmeticErrorPolicy-members.html  classcomppare_1_1internal_1_1policy_1_1autopolicy_1_1ArithmeticErrorPolicy.html  classcomppare_1_1internal_1_1policy_1_1autopolicy_1_1ArithmeticErrorPolicy.js  classcomppare_1_1internal_1_1policy_1_1autopolicy_1_1ArithmeticErrorPolicy__coll__graph.map  classcomppare_1_1internal_1_1policy_1_1autopolicy_1_1ArithmeticErrorPolicy__coll__graph.md5  classcomppare_1_1internal_1_1policy_1_1autopolicy_1_1RangeErrorPolicy-members.html  classcomppare_1_1internal_1_1policy_1_1autopolicy_1_1RangeErrorPolicy.html  (+266 more)
.github/workflows/: deploy-docs.yml
docs/: Doxyfile  user_guide.md
docs/html/: _do_not_optimize__demo_8cpp.html  _do_not_optimize__demo_8cpp.js  _do_not_optimize__demo_8cpp_8o_8d.html  _do_not_optimize__demo_8cpp__incl.map  _do_not_optimize__demo_8cpp__incl.md5  _l_i_c_e_n_s_e_8md.html  _r_e_a_d_m_e_8md.html  advanced__demo_21-custom__error__policy_2build_2_c_make_files_23_829_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  advanced__demo_21-custom__error__policy_2build_2_c_make_files_23_829_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  advanced__demo_22-google__benchmark_2build_2_c_make_files_23_829_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  advanced__demo_22-google__benchmark_2build_2_c_make_files_23_829_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  advanced__demo_23-manual__timing_2build_2_c_make_files_23_829_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  advanced__demo_23-manual__timing_2build_2_c_make_files_23_829_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  advanced__demo_24-_do_not_optimize_2build_2_c_make_files_23_829_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  advanced__demo_24-_do_not_optimize_2build_2_c_make_files_23_829_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  annotated.html  annotated_dup.js  ansi_8hpp.html  ansi_8hpp.js  ansi_8hpp__dep__incl.map  ansi_8hpp__dep__incl.md5  ansi_8hpp__incl.map  ansi_8hpp__incl.md5  ansi_8hpp_source.html  build_2_c_make_files_2saxpy_8dir_2init__saxpy_8cpp_8o_8d.html  build_2_c_make_files_2saxpy_8dir_2main_8cpp_8o_8d.html  build_2_c_make_files_2saxpy_8dir_2saxpy__cpu_8cpp_8o_8d.html  class_is_same_brand-members.html  class_is_same_brand.html  class_is_same_brand.js  classcomppare_1_1_input_context.html  classcomppare_1_1_input_context.js  classcomppare_1_1_input_context_1_1_output_context-members.html  classcomppare_1_1_input_context_1_1_output_context.html  classcomppare_1_1_input_context_1_1_output_context.js  classcomppare_1_1_input_context_1_1_output_context_a02caa5ba8fe7795a49177c91a421e9ea_cgraph.map  classcomppare_1_1_input_context_1_1_output_context_a02caa5ba8fe7795a49177c91a421e9ea_cgraph.md5  classcomppare_1_1_input_context_1_1_output_context_a13fd5d5a917916a9d3fb3c7d07f8daf4_cgraph.map  classcomppare_1_1_input_context_1_1_output_context_a13fd5d5a917916a9d3fb3c7d07f8daf4_cgraph.md5  classcomppare_1_1_input_context_1_1_output_context_a3be1304a484dba7b32a145956f5e455b_cgraph.map  (+753 more)
docs/latex/: _do_not_optimize__demo_8cpp.tex  _do_not_optimize__demo_8cpp_8o_8d.tex  _do_not_optimize__demo_8cpp__incl.md5  advanced__demo_21-custom__error__policy_2build_2_c_make_files_23_829_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  annotated.tex  ansi_8hpp.tex  ansi_8hpp__dep__incl.md5  ansi_8hpp__incl.md5  ansi_8hpp_source.tex  (+341 more)
examples/: README.md
examples/advanced_demo/1-custom_error_policy/: CMakeLists.txt  README.md  custom_error_policy_demo.cpp  custom_policy.hpp  data_structure.hpp
examples/advanced_demo/2-google_benchmark/: CMakeLists.txt  README.md  google_benchmark_demo.cpp
examples/advanced_demo/3-manual_timing/: CMakeLists.txt  README.md  manual_timing_demo.cpp
examples/advanced_demo/4-DoNotOptimize/: CMakeLists.txt  DoNotOptimize_demo.cpp  README.md  saxpy.cpp  saxpy_DoNotOptimize.cpp
examples/advanced_demo/5-nvbench/: CMakeLists.txt  README.md  saxpy_nvbench.cu
examples/saxpy/: CMakeLists.txt  README.md  init_saxpy.cpp  init_saxpy.hpp  main.cpp  saxpy_cpu.cpp  saxpy_cpu.hpp  saxpy_gpu.cu  saxpy_gpu.cuh
include/: ComPPare.hpp  ErrorStats.hpp  Gbench.hpp  param.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  concepts_0.js  defines_2.js  defines_3.js  defines_5.js  defines_6.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  (+44 more)
(+148 files in other folders)
